--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "bundle": "webpack --config webpack.prod.js --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "proxy": {
+    "/api/*": {
+      "target": "http://localhost:8000/api" 
+    }
+  },
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
