--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.5.2",
     "react-materialize": "^2.5.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1"
   },
   "devDependencies": {
