--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     }
   },
   "dependencies": {
+    "@emotion/core": "^10.0.4",
     "@version/react-router-v3": "^1.0.0",
     "axios": "^0.18.0",
     "file-upload-with-preview": "^3.0.4",
@@ -23,6 +24,8 @@
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.4.7",
     "redux": "^4.0.1"
   },
   "devDependencies": {
