--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-upload-with-preview": "^3.0.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-image-crop": "^6.0.9",
     "react-materialize": "^2.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
