--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
+RewriteEngine On
 RewriteBase /
-Options -MultiViews
-RewriteEngine On 
-RewriteCond %(REQUEST_FILENAME) !-f 
+RewriteRule ^index\.html$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ index.html [QSA, L]
+RewriteRule . /index.html [L]
